# LandScout

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
app/: cli.py  main.py  web.py  web_tasks.py
app/core/: branding.py  config.py  utils.py
app/crawlers/: fetcher.py  models.py  robots.py
app/db/: models.py  session.py
app/geo/: gazetteer.py  geocoder.py
app/llm/: batch.py  client.py  crawler_hints.py  document_filter.py  embeddings.py  investment_memo.py  monitoring.py  normalization.py  openai_client.py  quality.py  schemas.py  validation.py
app/parsers/: csv_parser.py  dispatcher.py  excel.py  html.py  json_parser.py  models.py  pdf.py  word.py
app/pipeline/: orchestrator.py
app/renderers/: report.py  residential_report.py
app/scoring/: candidates.py  residential.py  scorer.py
app/sources/: discovery.py  registry.py
app/sources/configs/: shanghai_sources.yml
tests/: conftest.py  test_ai_enrichment.py  test_cli.py  test_core_utils.py  test_csv_parser.py  test_evidence_and_units.py  test_excel_parser.py  test_fetcher.py  test_fixture_pipeline.py  test_geo_fallback.py  test_html_parser.py  test_json_parser.py  test_openai_client.py  test_openai_schema.py  test_pdf_parser.py  test_residential_recommendation.py  test_scoring.py  test_source_discovery.py  test_source_registry.py  test_web.py
tests/fixtures/: sample_shanghai_signals.html
